Mon Oct 13 21:34:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/Database.cs:
        * utils/BMW/website/App_Code/Service.asmx.cs:
        * utils/BMW/website/Timeline.aspx.cs:
        * utils/BMW/website/Web.config:
        * utils/BMW/website/baseline.aspx.cs:
        * utils/BMW/website/components.aspx.cs:
        * utils/BMW/website/default.aspx.cs:
        * utils/BMW/website/environment.aspx.cs:
        * utils/BMW/website/paths.aspx.cs:
        * utils/BMW/website/performance.aspx.cs:
        * utils/BMW/website/unittestchart.aspx.cs:
        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/UnitTestEvaluator.cs:

          . Refactored the backend to use the common database provider
            factory for instantiating ADO.

        * utils/BMW/assemblies/CUTS.Data/CUTS/Data/UnitTesting/UnitTestVariableTable.cs:

          . Missing source file.

Mon Oct 13 17:49:09 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs:

          . Updated the svn:ignore property.

Mon Oct 13 17:29:39 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * docs/manual/CUTS-manual.tex:
        * docs/manual/images/cuts-analysis-blocks.pdf:
        * docs/manual/images/cuts-modeling-blocks.pdf:
        * docs/manual/images/cuts-runtime-blocks.pdf:

          . Updated the images for the manual.

          . Enabled hyperlink references for chapters, section, and
            reference in the PDF manual.

Mon Oct 13 16:53:38 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-unittest.sql:

          . Updated the cuts.insert_unit_test () stored procedure to
            use a TEXT type for the 'eval' parameter.

        * contrib/WebChart:
        * contrib/WebChart/WebChart.dll:
        * contrib/WebChart/WebChart.snk:

          . Place the WebChart assembly used by CUTS in the contribution
            directory.
