@@ -1,3 +1,10 @@
+Thu Oct 16 04:29:20 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/CAPI/CAPI_Generators.cpp:
+
+          . Bug fix where the CAPI generator was not in sync with the new
+            directory layout of the CUTS Java packages.
+
 Mon Oct 13 21:34:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * utils/BMW/assemblies/CUTS.Data/CUTS/Data/Database.cs:
